--- a/rerender.csproj
+++ b/rerender.csproj
@@ -43,6 +43,8 @@
         <Reference Include="System" />
 
         <Reference Include="System.Core" />
+
+        <Reference Include="System.Windows.Forms" />
         <Reference Include="System.Xml.Linq" />
         <Reference Include="System.Data.DataSetExtensions" />
 
@@ -136,6 +138,11 @@
         <Compile Include="src\Graph\SubgraphExecutionPlanner.cs" />
         <Compile Include="src\Graph\SubgraphResourcesAllocation.cs" />
         <Compile Include="src\Graph\SubgraphType.cs" />
+        <Compile Include="src\Gui\GraphView.cs" />
+        <Compile Include="src\Gui\GraphvizExporter.cs" />
+        <Compile Include="src\Gui\ResourcesView.cs" />
+        <Compile Include="src\Gui\SubgraphDetailDialog.cs" />
+        <Compile Include="src\Gui\SubgraphSelectionDialog.cs" />
         <Compile Include="src\HarmonyPatches.cs" />
         <Compile Include="src\Graph\RenderGraph.cs" />
         <Compile Include="src\ReRenderMod.cs" />
