Implements context upgrade

--- a/rerender.csproj
+++ b/rerender.csproj
@@ -141,9 +141,11 @@
         <Compile Include="src\Gui\GraphView.cs" />
         <Compile Include="src\Gui\GraphvizExporter.cs" />
         <Compile Include="src\Gui\ResourcesView.cs" />
+        <Compile Include="src\Gui\RestartRequiredDialog.cs" />
         <Compile Include="src\Gui\SubgraphDetailDialog.cs" />
         <Compile Include="src\Gui\SubgraphSelectionDialog.cs" />
         <Compile Include="src\Gui\TexturesView.cs" />
+        <Compile Include="src\Gui\UnsupportedPlatformDialog.cs" />
         <Compile Include="src\HarmonyPatches.cs" />
         <Compile Include="src\Graph\RenderGraph.cs" />
         <Compile Include="src\ReRenderMod.cs" />
